--- a/strona/scss/_responsive.scss
+++ b/strona/scss/_responsive.scss
@@ -21,20 +21,8 @@
     }
 
 
-    // .menuBar {
-    //     min-height: 15vh;
-    // }
-
-    nav {
-        display: none;
-    }
-
-    .menu {
-        display: flex;
-    }
-
-    .menu-drop {
-        display: flex;
+    .menuBar {
+        min-height: 15vh;
     }
 
     .bar {
@@ -42,19 +30,6 @@
     }
 
     footer {
-        .iconbox {
-            width: 10%;
-        }
-
-        p {
-            font-size: .7rem;
-            width: 90%;
-        }
-
-
-    }
-
-    .footerHomepage {
         p {
             font-size: .7rem;
         }
@@ -95,7 +70,7 @@
 
     .discounts {
         .image {
-            height: 60vh;
+            height: 70vh;
         }
     }
 
@@ -163,27 +138,15 @@
         }
     }
 
-    // .menuBar {
-    //     min-height: 12.5vh;
-    // }
+    .menuBar {
+        min-height: 12.5vh;
+    }
 
     .bar {
         height: 12.5vh;
     }
 
     footer {
-
-        .iconbox {
-            width: 5%;
-        }
-
-        p {
-            width: 95%;
-            font-size: 1rem;
-        }
-    }
-
-    .footerHomepage {
         p {
             font-size: 1rem;
         }
@@ -258,6 +221,7 @@
         }
     }
 
+
 }
 
 @include media-lg {
@@ -284,10 +248,6 @@
         p {
             font-size: 1rem;
         }
-
-        i {
-            font-size: 2rem;
-        }
     }
 
 
@@ -299,22 +259,6 @@
         }
     }
 
-    nav {
-        height: 12.5vh;
-        display: flex;
-
-        img {
-            height: 90px;
-        }
-    }
-
-    .menu {
-        display: none;
-    }
-
-    .menu-drop {
-        display: none;
-    }
 
 }
 
@@ -392,9 +336,5 @@
         .image {
             height: 200vh;
         }
-    }
-
-    .menu {
-        height: 25vh;
     }
 }
