--- a/strona3/scss/_reset.scss
+++ b/strona3/scss/_reset.scss
@@ -10,27 +10,27 @@
     height: 100vh;
 
     a::selection {
-        background-color: $fourth-color;
+        background-color: $third-color;
     }
 
     img::selection {
-        background-color: $fourth-color
+     background-color: $third-color;
     }
 
     h1::selection {
-        background-color: $fourth-color;
+      background-color: $third-color;
     }
 
     h2::selection {
-        background-color: $fourth-color;
+  background-color: $third-color;
     }
 
     h3::selection {
-        background-color: $fourth-color;
+  background-color: $third-color;
     }
 
     p::selection {
-        background-color: $fourth-color;
+  background-color: $third-color;
     }
 
 
