--- a/strona3/scss/_about.scss
+++ b/strona3/scss/_about.scss
@@ -31,12 +31,12 @@ body {
     }
 
     .ania {
-        background: url(../img/_DSC4459-min.png);
+        background: url(../img/ania.png);
         background-size: cover;
     }
 
     .aga {
-        background: url(../img/_DSC4462-min.png);
+        background: url(../img/aga.png);
         background-size: cover;
     }
 
@@ -46,27 +46,27 @@ body {
     }
 
     .krzysiek {
-        background: url(../img/_DSC4498.png);
+        background: url(../img/krzysiek.png);
         background-size: cover;
     }
 
     .ala {
-        background: url(../img/_DSC4481-min.png);
+        background: url(../img/ala.png);
         background-size: cover;
     }
 
     .emilia {
-        background: url(../img/_dsc4467_optimized-min.png);
+        background: url(../img/emilka.png);
         background-size: cover;
     }
 
     .michal {
-        background: url(../img/IMG_2717.png);
+        background: url(../img/michal.png);
         background-size: cover;
     }
 
     .bartosz {
-        background: url(../img/IMG_2695.png);
+        background: url(../img/bartosz.png);
         background-size: cover;
     }
 
@@ -77,7 +77,7 @@ body {
     }
 
     .tomek {
-        background: url(../img/IMG_2749.png)center;
+        background: url(../img/tomasz.png)center;
         background-size: cover;
     }
 
