--- a/resources/scss/_discounts.scss
+++ b/resources/scss/_discounts.scss
@@ -2,58 +2,77 @@
 
 .discounts {
     .image {
-
         position: relative;
         overflow-x: hidden;
+        @include transition-ease;
+    }
 
-        .stripe {
-            position: absolute;
-            bottom: 0;
-            height: 20px;
-            width: 100%;
-            background: $third-color;
-        }
+    .image:hover {
+        transform: scale(1.05);
     }
 
     .hardrock {
-        background: url(../img/image6.jpeg) center;
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/Hard_Rock_Cafe_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 3s linear forwards;
     }
 
-    .hardrock2 {
-        background: url(../img/imag5.jpeg) center right;
-        background-size: cover;
-        background-color: #444444;
-    }
 
     .starbucks {
-        background: url();
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/starbucks_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 3.5s linear forwards;
     }
 
     .gym {
-        background: url();
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/RK_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 4s linear forwards;
     }
 
     .restaurant {
-        background: url();
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/Mamma_mia_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 4.5s linear forwards;
     }
 
     .restaurant2 {
-        background: url();
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/RetroInk_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 5s linear forwards;
     }
 
     .club {
-        background: url();
-        background-size: cover;
-        background-color: #444444;
+        background: url(../img/RIN_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 5.5s linear forwards;
+    }
+
+    .drivingLicens {
+        background: url(../img/Quattro_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 6s linear forwards;
+    }
+
+    .barber {
+        background: url(../img/Barber_house_-_wspolpraca.jpg) center;
+        background-size: 95%;
+        background-repeat: no-repeat;
+        opacity: 0;
+        animation: fade 1s 6.5s linear forwards;
     }
 }
