--- a/resources/scss/_responsive.scss
+++ b/resources/scss/_responsive.scss
@@ -1,9 +1,11 @@
 @include media-sm {
+
+
     .container-fluid {
         overflow-x: hidden;
     }
 
-    // Home page
+    //homepage
     .headings {
         h1 {
             font-size: 2rem;
@@ -18,8 +20,21 @@
         }
     }
 
-    .menuBar {
-        height: 15vh;
+
+    // .menuBar {
+    //     min-height: 15vh;
+    // }
+
+    nav {
+        display: none;
+    }
+
+    .menu {
+        display: flex;
+    }
+
+    .menu-drop {
+        display: flex;
     }
 
     .bar {
@@ -27,12 +42,26 @@
     }
 
     footer {
+        .iconbox {
+            width: 10%;
+        }
+
+        p {
+            font-size: .9rem;
+            width: 90%;
+        }
+
+
+    }
+
+    .footerHomepage {
         p {
             font-size: .7rem;
         }
     }
 
-    // About us
+    //aboutus
+
     .header {
         h1 {
             font-size: 2rem;
@@ -61,14 +90,16 @@
         }
     }
 
-    // Discounts
+    //discounts
+
+
     .discounts {
         .image {
-            height: 70vh;
+            height: 60vh;
         }
     }
 
-    // Contact
+    //contact
     .contact {
         height: 80vh;
         box-sizing: border-box;
@@ -109,10 +140,48 @@
             padding: .5rem;
         }
     }
+
+    .icons {
+        width: 80%;
+        height: 300vh;
+        margin: 0 auto;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+
+        .row {
+            flex-direction: column;
+            display: flex;
+            justify-content: center;
+            height: 100vh;
+
+            .icon1 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                margin: 1.5rem 0;
+                height: 100%;
+                width: 100%;
+
+                i {
+                    font-size: 3rem;
+                    color: $third-color;
+                }
+
+                h1 {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+
 }
 
 @include media-md {
-    // Homepage
+
+    //homepage
+
     .headings {
         h1 {
             font-size: 3rem;
@@ -127,27 +196,33 @@
         }
     }
 
-    .navbar-brand {
-        img {
-            height: 12.5vh;
-        }
-    }
-
-    .menuBar {
-        height: 12.5vh;
-    }
+    // .menuBar {
+    //     min-height: 12.5vh;
+    // }
 
     .bar {
         height: 12.5vh;
     }
 
     footer {
+
+        .iconbox {
+            width: 5%;
+        }
+
+        p {
+            width: 95%;
+            font-size: 1rem;
+        }
+    }
+
+    .footerHomepage {
         p {
             font-size: 1rem;
         }
     }
 
-    // About us
+    //about
     .header {
         h1 {
             font-size: 3rem;
@@ -171,20 +246,22 @@
         }
     }
 
-    // Discounts
+    //discounts
+
     .discounts {
         .image {
-            height: 70vh;
+            height: 80vh;
         }
     }
 
-    // Contact
+    //contact
     .contact {
         height: 85vh;
         box-sizing: border-box;
     }
 
     form {
+
         margin: 2rem;
         padding: 2rem;
         width: 60vh;
@@ -214,10 +291,15 @@
             padding: .5rem;
         }
     }
+
+
+
 }
 
 @include media-lg {
-    //Homepage
+
+    //homepage
+
     .headings {
         h1 {
             font-size: 5rem;
@@ -232,22 +314,85 @@
         }
     }
 
+
+
     footer {
         p {
             font-size: 1rem;
         }
-    }
 
-    //Discounts
-    .discounts {
-        .image {
-            height: 50vh;
+        i {
+            font-size: 2rem;
         }
     }
+
+
+    //discounts
+
+    .discounts {
+        .image {
+            height: 40vh;
+        }
+    }
+
+    nav {
+        height: 12.5vh;
+        display: flex;
+
+        img {
+            height: 90px;
+        }
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .menu-drop {
+        display: none;
+    }
+
+    .icons {
+        width: 100%;
+        height: 100vh;
+        flex-direction: row;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .row {
+            height: 100%;
+            flex-direction: row;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .icon1 {
+                flex-direction: column;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 2rem;
+                height: 70%;
+                width: 40%;
+
+                i {
+                    font-size: 5rem;
+                    color: $third-color;
+                }
+
+                h1 {
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+
 }
 
 @include media-xl {
-    // About us
+
+    //about
 
     .header {
         h1 {
@@ -256,6 +401,7 @@
     }
 
     .about {
+
         .text {
             h1 {
                 font-size: 3rem;
@@ -271,14 +417,25 @@
             }
         }
     }
+
+    .discounts {
+        .image {
+            height: 55vh;
+        }
+    }
+
 }
 
 @include media-sm-landscape {
+
+
+
     .bar {
         height: 15vh;
     }
 
-    // About us
+    //about
+
     .about {
         .img {
             height: 150vh;
@@ -299,5 +456,17 @@
                 font-size: .8rem;
             }
         }
+    }
+
+    //discounts
+
+    .discounts {
+        .image {
+            height: 200vh;
+        }
+    }
+
+    .menu {
+        height: 25vh;
     }
 }
