--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1,4 +1,5 @@
 @import "node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @import 'mixins';
 @import 'variables';
@@ -10,4 +11,6 @@
 @import 'about';
 @import 'discounts';
 @import 'contact';
-@import 'customization';
+@import 'blog/homepage';
+@import 'blog/responsive';
+@import 'blog/article';
