--- a/views/elements/footer.pug
+++ b/views/elements/footer.pug
@@ -1,2 +1,8 @@
 footer
 	p.ml-2 Copyright &copy; 2020 SU XLII LO Kraków
+
+	.iconbox
+		a.mr-3( href="https://www.instagram.com/su_42lo/" )
+			i.fab.fa-instagram
+		a( href="https://www.facebook.com/lo42krakow" )
+			i.fab.fa-facebook-f
