--- a/views/contact-us.pug
+++ b/views/contact-us.pug
@@ -70,21 +70,21 @@ html( lang="pl" )
 					.col.icon1.p-0
 						a( href="https://www.instagram.com/liceum42/" )
 							.iconBox2
-								i.fab.fa-facebook-f.m-5
+								i.fab.fa-instagram.m-5
 
 							h1 liceum42
 
 					.col.icon1.p-0
 						a( href="https://www.instagram.com/su_42lo/" )
 							.iconBox2
-								i.fab.fa-facebook-f.m-5
+								i.fab.fa-instagram.m-5
 
 							h1 su_42lo
 
 					.col.icon1.p-0
 						a( href="https://www.instagram.com/42lo_tellonym/" )
 							.iconBox2
-								i.fas.fa-file-code.m-5
+								i.fab.fa-instagram.m-5
 
 							h1 42lo_tellonym
 
