--- a/views/elements/footer.pug
+++ b/views/elements/footer.pug
@@ -4,5 +4,5 @@ footer
 	.iconbox
 		a.mr-3( href="https://www.instagram.com/su_42lo/" )
 			i.fab.fa-instagram
-		a( href="https://www.facebook.com/lo42krakow" )
+		a.mr-3( href="https://www.facebook.com/lo42krakow" )
 			i.fab.fa-facebook-f
