--- a/resources/scss/blog/_responsive.scss
+++ b/resources/scss/blog/_responsive.scss
@@ -1,21 +1,21 @@
 @include media-sm {
+	.wrapperDesktop {
+        display: none;
+    }
+    .wrapperMobile {
+        display: flex;
+	}
+
     .blogH1 {
         font-size: 2rem;
     }
 
-    .wrapperDesktop {
-        display: none;
-    }
-
-    .wrapperMobile {
-        display: flex;
-    }
-
     .yellowbar {
-        bottom: 0;
-        left: 0;
+        bottom: 0px;
+        left: 0px;
         width: 100%;
-        height: 60px;
+		height: 60px;
+		margin: 0px;
     }
 
     .topBar {
@@ -35,7 +35,6 @@
         }
 
         .autor {
-
             h3 {
                 font-size: 1rem;
             }
@@ -51,40 +50,24 @@
             }
         }
     }
-
 }
 
-
-@include media-md {
-
-
-    .wrapperDesktop {
-        display: none;
-    }
-
-    .wrapperMobile {
-        display: flex;
-    }
-
-
-}
+@include media-md {}
 
 @include media-lg {
-
     .wrapperDesktop {
-        display: flex;
-    }
-
-    .wrapperMobile {
         display: none;
+    }
+    .wrapperMobile {
+        display: flex;
     }
 
     .yellowbar {
-        bottom: 5px;
-        left: 5px;
-        right: 5px;
-        width: calc(100% - 10px);
-        height: 60px;
+        bottom: 0px;
+        left: 0px;
+        width: 100%;
+		height: 60px;
+		margin: 0px;
     }
 
     .topBar {
@@ -98,14 +81,11 @@
     }
 
     .articleWrapper {
-
         .title {
             font-size: 4rem;
         }
 
         .autor {
-
-
             h3 {
                 font-size: 1.5rem;
             }
@@ -120,10 +100,20 @@
                 font-size: 1.3rem;
             }
         }
-
     }
-
-
 }
 
-@include media-xl {}
+@include media-xl {
+	.wrapperDesktop {
+        display: flex;
+    }
+    .wrapperMobile {
+        display: none;
+	}
+
+	.yellowbar {
+        width: calc(100% - 0.5rem);
+		height: 60px;
+		margin: 0.25rem;
+    }
+}
